[tool.poetry]
name = "flask_queue_sse"
version = "0.1.3"
description = "A simple implementation of Server-Sent Events for Flask that doesn't require Redis pub/sub."
authors = ["Vasanth Developer <vsnthdev@gmail.com>"]
readme = "README.md"
packages = [{ include = "flask_queue_sse" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
